--- a/Style.css
+++ b/Style.css
@@ -11,6 +11,13 @@ font-family:sans-serif;
     
 }
 
+#grad {
+  background: -webkit-linear-gradient(red, blue); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(red, blue); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(red, blue); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(red, blue); /* Standard syntax */
+}
+
 .hovedtekst {
 	width: 98%%;
 	height:70%;
