--- a/Style.css
+++ b/Style.css
@@ -12,10 +12,10 @@ font-family:sans-serif;
 }
 
 #grad {
-  background: -webkit-linear-gradient(red, blue); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(red, blue); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(red, blue); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(red, blue); /* Standard syntax */
+  background: -webkit-linear-gradient(black, blue, black); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(black, blue, black); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(black, blue, black); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(black, blue, black); /* Standard syntax */
 }
 
 .hovedtekst {
